# E-Commerce_API

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/: celery_tasks.py  config.py  constraints.py  custom_exceptions.py  deps.py  main.py  utils.py
src/crud/: addresses.py  carts.py  categories.py  orders.py  products.py  recovery_tokens.py  refresh_tokens.py  reviews.py  users.py
src/db/: db.py  models.py
src/html_templates/: email_confirmation.html  password_recovery.html
src/routers/: addresses.py  auth.py  categories.py  orders.py  payments.py  products.py  reviews.py  users.py
src/schemas/: address.py  cart.py  category.py  item.py  order.py  product.py  review.py  user.py
