[tool.poetry]
name = "e-commerce-api"
version = "0.1.0"
description = ""
authors = ["Ivan Mihun <vsk76090@gmail.com>"]
readme = "README.md"
packages = [{include = "e_commerce_api"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.7.3"}
alembic = "^1.13.1"
bcrypt = "^4.1.3"
passlib = "^1.7.4"
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
